--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -38,7 +38,7 @@ phases:
     - sed -i -e "s/TEMPLATE_PLACEHOLDER/$TEMPLATE_BUCKET\/codebuild/" cloudformation/stackset/microservice-params-template.json
 
     - cp cloudformation/stackset/microservice-params-template.json cloudformation/stackset/microservice-params-prod.json
-    - sed -i -e "s/ENVIRONMENT_PLACEHOLDER/Prod\/codebuild/" cloudformation/stackset/microservice-params-prod.json
+    - sed -i -e "s/ENVIRONMENT_PLACEHOLDER/Prod/" cloudformation/stackset/microservice-params-prod.json
 
     - |
       aws s3 cp "cloudformation/stackset/microservice.yaml" "s3://$TEMPLATE_BUCKET/codebuild/stackset/microservice.yaml"
