--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -32,10 +32,12 @@ phases:
 
     - CONTEXT_PATH_ESCAPED=$(echo $CONTEXT_PATH | sed 's/\//\\\//g')
     - LOAD_BALANCER_LISTENER_CERTIFICATE_ARN_ESCAPED=$(echo $LOAD_BALANCER_LISTENER_CERTIFICATE_ARN | sed 's/\//\\\//g')
+    - echo $LOAD_BALANCER_LISTENER_CERTIFICATE_ARN_ESCAPED
 
     - sed -i -e "s/CONTEXT_PATH_PLACEHOLDER/$CONTEXT_PATH_ESCAPED/" cloudformation/stackset/microservice-params-template.json
     - sed -i -e "s/LOAD_BALANCER_LISTENER_CERTIFICATE_ARN_PLACEHOLDER/$LOAD_BALANCER_LISTENER_CERTIFICATE_ARN_ESCAPED/" cloudformation/stackset/microservice-params-template.json
     - sed -i -e "s/TEMPLATE_PLACEHOLDER/$TEMPLATE_BUCKET\/codebuild/" cloudformation/stackset/microservice-params-template.json
+    - cat cloudformation/stackset/microservice-params-template.json
 
     - cp cloudformation/stackset/microservice-params-template.json cloudformation/stackset/microservice-params-prod.json
     - sed -i -e "s/ENVIRONMENT_PLACEHOLDER/Prod/" cloudformation/stackset/microservice-params-prod.json
@@ -43,6 +45,7 @@ phases:
     - |
       aws s3 cp "cloudformation/stackset/microservice.yaml" "s3://$TEMPLATE_BUCKET/codebuild/stackset/microservice.yaml"
       aws s3 cp "cloudformation/stackset/microservice-params-prod.json" "s3://$TEMPLATE_BUCKET/codebuild/stackset/microservice-params-prod.json"
+      cat cloudformation/stackset/microservice-params-prod.json
 artifacts:
   files:
   - cloudformation/stackset/microservice.yaml
