wrong certificate arn error fix attemp 1

--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -31,6 +31,7 @@ phases:
       done
 
     - CONTEXT_PATH_ESCAPED=$(echo $CONTEXT_PATH | sed 's/\//\\\//g')
+    - echo $LOAD_BALANCER_LISTENER_CERTIFICATE_ARN
     - LOAD_BALANCER_LISTENER_CERTIFICATE_ARN_ESCAPED=$(echo $LOAD_BALANCER_LISTENER_CERTIFICATE_ARN | sed 's/\//\\\//g')
     - echo $LOAD_BALANCER_LISTENER_CERTIFICATE_ARN_ESCAPED
 
