--- a/cloudformation/microservice-pipeline.yaml
+++ b/cloudformation/microservice-pipeline.yaml
@@ -17,6 +17,8 @@ Parameters:
     Type: String
   LoadBalancerListenerCertificateArn:
     Type: String
+  EnvironmentStackSetName:
+    Type: String
 
 Resources:
   CodePipelineRole:
@@ -66,9 +68,9 @@ Resources:
                   - "cloudformation:ExecuteChangeSet"
                   - "cloudformation:ValidateTemplate"
                 Resource:
-                  - Fn::Sub: arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/Test-${AWS::StackName}*
-                  - Fn::Sub: arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/UAT-${AWS::StackName}*
-                  - Fn::Sub: arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/Prod-${AWS::StackName}*
+                  - Fn::Sub: arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-DEV*
+                  - Fn::Sub: arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-UAT*
+                  - Fn::Sub: arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-PROD*
               -
                 Effect: "Allow"
                 Action:
@@ -259,9 +261,9 @@ Resources:
                   - "iam:ListInstanceProfilesForRole"
                   - "iam:RemoveRoleFromInstanceProfile"
                 Resource:
-                  - Fn::Sub: arn:aws:iam::${AWS::AccountId}:instance-profile/Test-${AWS::StackName}-SecurityStack*
-                  - Fn::Sub: arn:aws:iam::${AWS::AccountId}:instance-profile/UAT-${AWS::StackName}-SecurityStack*
-                  - Fn::Sub: arn:aws:iam::${AWS::AccountId}:instance-profile/Prod-${AWS::StackName}-SecurityStack*
+                  - Fn::Sub: arn:aws:iam::${AWS::AccountId}:instance-profile/${AWS::StackName}-DEV-SecurityStack*
+                  - Fn::Sub: arn:aws:iam::${AWS::AccountId}:instance-profile/${AWS::StackName}-UAT-SecurityStack*
+                  - Fn::Sub: arn:aws:iam::${AWS::AccountId}:instance-profile/${AWS::StackName}-PROD-SecurityStack*
               -
                 Effect: "Allow"
                 Action:
@@ -326,12 +328,12 @@ Resources:
                   - "autoscaling:TerminateInstanceInAutoScalingGroup"
                   - "autoscaling:UpdateAutoScalingGroup"
                 Resource:
-                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/Test-${AWS::StackName}-ServerStack-*
-                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/UAT-${AWS::StackName}-ServerStack-*
-                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/Prod-${AWS::StackName}-ServerStack-*
-                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:${AWS::AccountId}:*:Test-${AWS::StackName}-ServerStack-*
-                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:${AWS::AccountId}:*:UAT-${AWS::StackName}-ServerStack-*
-                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:${AWS::AccountId}:*:Prod-${AWS::StackName}-ServerStack-*
+                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${AWS::StackName}-DEV-ServerStack-*
+                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${AWS::StackName}-UAT-ServerStack-*
+                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${AWS::StackName}-PROD-ServerStack-*
+                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:${AWS::AccountId}:*:${AWS::StackName}-DEV-ServerStack-*
+                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:${AWS::AccountId}:*:${AWS::StackName}-UAT-ServerStack-*
+                  - Fn::Sub: arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:launchConfiguration:${AWS::AccountId}:*:${AWS::StackName}-PROD-ServerStack-*
               -
                 Effect: "Allow"
                 Action:
@@ -428,6 +430,9 @@ Resources:
           - Name: LOAD_BALANCER_LISTENER_CERTIFICATE_ARN
             Value:
               Ref: LoadBalancerListenerCertificateArn
+          - Name: ENVIRONMENT_STACK_SET_NAME
+            Value:
+              Ref: EnvironmentStackSetName
       Source:
         Type: CODEPIPELINE
         BuildSpec: cloudformation/buildspec.yml
@@ -508,7 +513,7 @@ Resources:
 
                 Capabilities: CAPABILITY_NAMED_IAM
                 StackName:
-                  Fn::Sub: Prod-${AWS::StackName}
+                  Fn::Sub: ${AWS::StackName}-PROD
                 TemplateConfiguration: CFNTemplateArtifact::cloudformation/stackset/microservice-params-prod.json
                 TemplatePath: CFNTemplateArtifact::cloudformation/stackset/microservice.yaml
               RunOrder: 1
@@ -526,7 +531,7 @@ Resources:
                 ActionMode: CHANGE_SET_EXECUTE
                 ChangeSetName: ProdCBChangeSet
                 StackName:
-                  Fn::Sub: Prod-${AWS::StackName}
+                  Fn::Sub: ${AWS::StackName}-PROD
               RunOrder: 2
 
       ArtifactStore:
