pipeline param desc changed

--- a/cloudformation/microservice-pipeline.yaml
+++ b/cloudformation/microservice-pipeline.yaml
@@ -3,7 +3,7 @@ Description: Create a CodePipeline for wixit-auth stack set with nested stacks.
 Parameters:
   ArtifactStoreS3Location:
     Type: String
-    Description: Name of the S3 bucket to store clodformation CodePipeline artificat.
+    Description: Name of the S3 bucket to store clodformation CodePipeline artificats.
   GitHubInfrastructureRepo:
     Type: String
   GitHubInfrastructureBranch:
