--- a/cloudformation/stackset/microservice-templates/service.yaml
+++ b/cloudformation/stackset/microservice-templates/service.yaml
@@ -19,6 +19,21 @@ Parameters:
   Subnets:
     Type: List<AWS::EC2::Subnet::Id>
 
+  DatabaseEndpoint:
+    Type: String
+
+  DatabasePort:
+    Type: String
+
+  BMasterUserName:
+    Type: String
+
+  DBMasterPassword:
+    Type: String
+
+  ContextPath:
+    Type: String
+
 Resources:
   TaskExecutionRole:
     Type: AWS::IAM::Role
@@ -65,6 +80,17 @@ Resources:
         - Name: simple-app
           Image: 588476158895.dkr.ecr.eu-west-1.amazonaws.com/gs-spring-boot-docker
           Essential: true
+          Environment:
+            - Name: DB_ENDPOINT
+              Value: !Ref DatabaseEndpoint
+            - Name: DB_PORT
+              Value: !Ref DatabasePort
+            - Name: DB_MASTER_NAME
+              Value: !Ref DBMasterUserName
+            - Name: DB_MASTER_PSWD
+              Value: !Ref DBMasterPassword
+            - Name: CONTEXT_PATH
+              Value: !Ref ContextPath
           Memory: 256
           PortMappings:
             - HostPort: 8080
