context path param passed to service template

--- a/cloudformation/stackset/microservice.yaml
+++ b/cloudformation/stackset/microservice.yaml
@@ -81,6 +81,7 @@ Resources:
             !Sub "${EnvironmentStackSetName}-${Environment}-DatabasePort"
         DBMasterUserName: !Ref DBMasterUserName
         DBMasterPassword: !Ref DBMasterPassword
+        ContextPath: !Ref ContextPath
 
 
 Outputs:
