--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -39,7 +39,7 @@ phases:
 
       echo "PROD CONFIGS"
       cp cloudformation/stackset/microservice-params-template.json cloudformation/stackset/microservice-params-prod.json
-      aws s3 cp s3://wixit-core-configs/auth/prod/set-vars.sh .
+      aws s3 cp s3://$CONFIG_BUCKET/auth/prod/set-vars.sh .
       chmod +x set-vars.sh
       ./set-vars.sh
       echo "SET UP VARS"
