env specific params loading from s3 changed

--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -14,6 +14,7 @@ phases:
   install:
     commands:
       npm install jsonlint -g
+      apt-get install -y jq
   pre_build:
     commands:
     - echo "Validating CFN templates"
@@ -39,12 +40,11 @@ phases:
 
       echo "PROD CONFIGS"
       cp cloudformation/stackset/microservice-params-template.json cloudformation/stackset/microservice-params-prod.json
-      aws s3 cp s3://$CONFIG_BUCKET/auth/prod/set-vars.sh .
-      chmod +x set-vars.sh
-      ./set-vars.sh
-      echo "SET UP VARS"
-      echo $DATABASE_MASTER_USERNAME
-      echo $DATABASE_MASTER_PASSWORD
+      aws s3 cp s3://$CONFIG_BUCKET/auth/prod/config.json .
+      values=$(<config.json)
+      for s in $(echo $values | jq -r "to_entries|map(\"\(.key)=\(.value|tostring)\")|.[]" ); do
+        export $s
+      done
       sed -i -e "s/DATABASE_MASTER_USERNAME_PLACEHOLDER/$DATABASE_MASTER_USERNAME/" cloudformation/stackset/microservice-params-prod.json
       sed -i -e "s/DATABASE_MASTER_PASSWORD_PLACEHOLDER/$DATABASE_MASTER_PASSWORD/" cloudformation/stackset/microservice-params-prod.json
       sed -i -e "s/ENVIRONMENT_PLACEHOLDER/PROD/" cloudformation/stackset/microservice-params-prod.json
