env specific params loading from s3 changed

--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -13,6 +13,7 @@ environment_variables:
 phases:
   install:
     commands:
+      apt update && apt install -y jq
       npm install jsonlint -g
   pre_build:
     commands:
