env specific params loading from s3 changed

--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -13,8 +13,8 @@ environment_variables:
 phases:
   install:
     commands:
-      apt update && apt install -y jq
-      npm install jsonlint -g
+    - apt update && apt install -y jq
+    - npm install jsonlint -g
   pre_build:
     commands:
     - echo "Validating CFN templates"
