--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -41,6 +41,8 @@ phases:
       echo "PROD CONFIGS"
       cp cloudformation/stackset/microservice-params-template.json cloudformation/stackset/microservice-params-prod.json
       aws s3 cp s3://$CONFIG_BUCKET/auth/prod/config.json .
+      echo "WTF"
+      cat config.json
       values=$(<config.json)
       echo $values
       for s in $(echo $values | jq -r "to_entries|map(\"\(.key)=\(.value|tostring)\")|.[]" ); do
