--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
 target/
 cloudformation/microservice-pipeline-params.json
+cloudformation/microservice-pipeline-params-without-variables.json
 cloudformation/config
