--- a/cloudformation/buildspec.yml
+++ b/cloudformation/buildspec.yml
@@ -25,7 +25,7 @@ phases:
       done
   build:
     commands:
-    - echo "Copying child stack templates to S3"
+    - echo "Copying child stack templates to s3"
     - |
       for child_template in $CHILD_TEMPLATES; do
         aws s3 cp "$child_template" "s3://$TEMPLATE_BUCKET/codebuild/$child_template"
