--- a/cloudformation/stackset/microservice-templates/load-balancer-listener.yaml
+++ b/cloudformation/stackset/microservice-templates/load-balancer-listener.yaml
@@ -6,31 +6,14 @@ Parameters:
   VpcId:
     Type: String
 
-  LoadBalancerArn:
-    Type: String
-
-  LoadBalancerListenerCertificateArn:
-    Type: String
-
   ContextPath:
+    Type: String
+
+  LoadBalancerListenerArn:
     Type: String
 
 
 Resources:
-  LoadBalancerListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      Certificates:
-        - CertificateArn: !Ref LoadBalancerListenerCertificateArn
-      LoadBalancerArn: !Ref LoadBalancerArn
-      Port: 443
-      Protocol: HTTPS
-      SslPolicy: ELBSecurityPolicy-TLS-1-2-2017-01
-      DefaultActions:
-        - Type: forward
-          TargetGroupArn: !Ref TargetGroup
-
-
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -52,7 +35,7 @@ Resources:
   ListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
-      ListenerArn: !Ref LoadBalancerListener
+      ListenerArn: !Ref LoadBalancerListenerArn
       Priority: 1
       Conditions:
         - Field: path-pattern
