--- a/cloudformation/stackset/microservice.yaml
+++ b/cloudformation/stackset/microservice.yaml
@@ -27,6 +27,9 @@ Parameters:
     Type: String
     NoEcho: true
 
+  LoadBalancerListenerRulePriority:
+    Type: Number
+
 Resources:
   Cluster:
     Type: AWS::CloudFormation::Stack
@@ -55,6 +58,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${EnvironmentStackSetName}-${Environment}-LoadBalancerListenerArn"
         ContextPath: !Ref ContextPath
+        LoadBalancerListenerRulePriority: !Ref LoadBalancerListenerRulePriority
 
   Service:
     Type: AWS::CloudFormation::Stack
